# opendota-mcp-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  start_mcp.sh
.github/workflows/: deploy.yml
opendota_mcp/: __init__.py  classes.py  client.py  config.py  decorators.py  resolvers.py  server.py  server.py.backup  server.py.backup.sse  utils.py
opendota_mcp/tools/: __init__.py  hero_tools.py  lookup_tools.py  match_tools.py  misc_tools.py  player_tools.py
src/: classes.py  server.py
