[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opendota-mcp-server"
version = "1.0.0"
description = "MCP server for OpenDota API - Query Dota 2 player statistics, match data, and hero information"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "hkaanengin" }
]
keywords = ["mcp", "opendota", "dota2", "api", "fastmcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp==2.13.0.2",
    "fastapi==0.121.0",
    "httpx==0.27.2",
    "python-dotenv==1.0.1",
    "uvicorn[standard]==0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
opendota-mcp = "opendota_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["opendota_mcp*"]
exclude = ["tests*", "*.tests*"]

[tool.setuptools.package-data]
opendota_mcp = ["py.typed"]

# Ruff configuration for linting and formatting
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "-v --tb=short"

# MyPy configuration for type checking
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true

[[tool.mypy.overrides]]
module = "fastmcp.*"
ignore_missing_imports = true